syntax = "proto3";

option go_package = "api/token-service/v1";

package token_service;

service TokenService {
    rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse) ;
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) ;
}

message CreateTokenRequest {
    string project_id = 1;
    auth authority = 2;
}

message CreateTokenResponse {
    string token = 1;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    string project_id = 1;
    auth authority = 2;
}

enum auth {
    read_only = 0;
    read_write = 1;
    owner = 2;
  }