syntax = "proto3";

option go_package = "api/token-service/v1";

package token.v1;

service Token {
  rpc CreateToken (CreateTokenRequest) returns (CreateTokenResponse);
  rpc GetToken (GetTokenRequest) returns (GetTokenResponse);
  rpc DeleteToken (DeleteTokenRequest) returns (DeleteTokenResponse);
}

message CreateTokenRequest {
  string project_id = 1;
  string authority = 2;
}

message CreateTokenResponse {
  string token = 1;
}

message GetTokenRequest {
  string token = 1;
}

message GetTokenResponse {
  string token_id = 1;
  string project_id = 2;
  string authority = 3;
}

message DeleteTokenRequest {
  string project_id = 1;
}

message DeleteTokenResponse {
  string project_id = 1;
}